CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(PoDoFoBrowser)

# Enable C++14
set(CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_STANDARD 11)

SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake/modules")

SET(CMAKE_AUTOMOC FALSE)
SET(CMAKE_AUTOUIC FALSE)
FIND_PACKAGE(Qt5 5.6 REQUIRED COMPONENTS Widgets)

FIND_PACKAGE(LIBPODOFO)
IF(NOT LIBPODOFO_FOUND)
	MESSAGE("+++PoDoFo not found... building private copy")
	SET(PODOFO_BUILD_STATIC 1)
	SET(PODOFO_BUILD_SHARED 0)
	SET(PODOFO_BUILD_LIB_ONLY 1)
	ADD_SUBDIRECTORY(externals/required_libpodofo)
	SET(LIBPODOFO_H ${CMAKE_CURRENT_SOURCE_DIR}/externals/required_libpodofo)
	SET(LIBPODOFO_CONFIG_H ${CMAKE_CURRENT_BINARY_DIR}/externals/required_libpodofo)
	SET(LIBPODOFO_LIB podofo_static)
	MESSAGE("+++Done setting up private PoDoFo copy")
ENDIF(NOT LIBPODOFO_FOUND)


INCLUDE_DIRECTORIES(
	${LIBPODOFO_H}
	${LIBPODOFO_CONFIG_H}
	)

ADD_SUBDIRECTORY(src)
